--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+
 env:
   DOCKER_IMAGE: ${{ secrets.DOCKER_HUB_USERNAME }}/todo-api
   
