--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -26,6 +26,10 @@ on:
     - cron: '36 20 * * 1'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   Fortify-AST-Scan:
     # Use the appropriate runner for building your source code. Ensure dev tools required to build your code are present and configured appropriately (MSBuild, Python, etc).
