--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,6 +22,10 @@ on:
           - apply
           - destroy
 
+permissions:
+  contents: read
+  id-token: write
+
 env:
   TF_VERSION: '1.6.0'
   TF_WORKING_DIR: './terraform'
