--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
-  "keywords": ["todo", "api", "express", "mongodb"],
+  "keywords": [
+    "todo",
+    "api",
+    "express",
+    "mongodb"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "express": "^4.22.1",
-    "mongoose": "^8.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.11"
   }
 }
