--- a/security/vault/docker-compose.yml
+++ b/security/vault/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8200:8200"
     environment:
       VAULT_ADDR: 'http://0.0.0.0:8200'
-      VAULT_DEV_ROOT_TOKEN_ID: 'root'
+      VAULT_DEV_ROOT_TOKEN_ID: '${VAULT_DEV_ROOT_TOKEN_ID:-root-change-me}'
       VAULT_DEV_LISTEN_ADDRESS: '0.0.0.0:8200'
     cap_add:
       - IPC_LOCK
